2008-08-07  Alp Toker  <alp@nuanti.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=20313
        Add null check in String::fromUTF8()

        Make String::fromUTF8() consistent with other constructors by
        returning a null String when the input is null instead of crashing.

        * platform/text/String.cpp:
        (WebCore::String::fromUTF8):

2008-08-06  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix after Frame -> ScriptController moves.

        * platform/wx/TemporaryLinkStubs.cpp:

2008-08-06  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim.

        - Make XHR console message clearer.

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::didFinishLoading):

2008-08-06  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Tim.

        - Created a new function to create DOM links from text without
        converting back and forth from HTML and messing with escaping special
        characters.

        * page/inspector/Console.js:
        * page/inspector/inspector.js:
        * page/inspector/utilities.js:

2008-08-06  Eric Seidel  <eric@webkit.org>

        Reviewed by hyatt.

        Fix a large animation leak found on the buildbot
        (m_animations and m_transitions were never deleted)
        Drag RenderStyle (kicking and screaming) into the 21st century
        of memory management with a little application of OwnPtr.

        * rendering/style/RenderStyle.cpp:
        (WebCore::FillLayer::cullEmptyLayers):
        (WebCore::RenderStyle::diff):
        (WebCore::RenderStyle::contentDataEquivalent):
        (WebCore::RenderStyle::setContent):
        (WebCore::BindingURI::BindingURI):
        (WebCore::RenderStyle::setBoxShadow):
        (WebCore::ShadowData::ShadowData):
        (WebCore::RenderStyle::counterDirectives):
        (WebCore::RenderStyle::accessCounterDirectives):
        (WebCore::RenderStyle::adjustAnimations):