@@ -1,3 +1,11 @@
+2008-08-07  Kevin McCullough  <kmccullough@apple.com>
+
+        Reviewed by Geoff.
+
+        <rdar://problem/6115981> Start the profiler in Heavy view
+
+        * page/inspector/ProfileView.js:
+
 2008-08-07  Alp Toker  <alp@nuanti.com>
 
         Reviewed by Eric Seidel.
